# enterprise-ai-support-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Procfile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: errors.py
app/api/dependencies/: auth.py  conversations.py  services.py
app/api/v1/: router.py
app/api/v1/endpoints/: conversations.py  health.py  tickets.py
app/core/: auth.py  logging.py  metrics.py  resilience.py  settings.py  tracing.py
app/repositories/: conversations.py
app/schemas/: conversations.py  retrieval.py  tickets.py
app/services/: conversations.py  knowledge.py  prompts.py  ticket_analysis.py
docs/: architecture.md  operations.md
evaluation/: __init__.py  runner.py
evaluation/data/: support_cases.jsonl
sample_data/knowledge/: account_access_procedure.md  billing_dispute_procedure.md  outage_escalation_procedure.txt
scripts/: provision_rag_corpus.py  run_evaluation.py  verify_rag_retrieval.py
tests/integration/: test_conversations.py  test_health.py  test_ticket_analysis.py
tests/unit/: test_auth.py  test_conversations.py  test_evaluation.py  test_gemini_ticket_analysis_service.py  test_local_knowledge_retriever.py  test_mock_ticket_analysis_service.py  test_resilience.py  test_run_evaluation_script.py  test_settings.py  test_ticket_analysis_provider.py  test_tracing.py  test_vertex_rag_knowledge_retriever.py
