[project]
name = "enterprise-ai-support-copilot"
version = "0.1.0"
description = "Enterprise AI support copilot API"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "google-cloud-aiplatform",
    "google-genai",
    "pandas",
    "python-dotenv",
    "uvicorn[standard]",
]

[project.scripts]
support-copilot-evaluate = "evaluation.runner:main"

[project.optional-dependencies]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["evaluation*", "sample_data*", "tests*", "scripts*", "docs*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
